--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,16 @@ body {
 }
 
 
-button {
-  background-color: purple;
+.btn {
+  padding: 5px 15px;
+  border-radius:30px;
+  border:none;
+  cursor:pointer;
+  font-size:1rem;
+}
+
+.btn:hover{
+  box-shadow:2px 2px 12px grey;
 }
 
 .h1 {
@@ -293,8 +301,76 @@ width: 22px;;
 
   /* ====== 5. COLLAGE (HOME) ========  */
 
+  .featured-collage-container{
+    padding: 5% 10% 5% 10%;
+  }
+
   .img-collage-1{
-    height: 200px;
-    width: 100px;
+    height:400px;
+    width: 250px;
     
   }
+
+  .img-collage-2{
+    height:200px;
+    width: 200px;
+    
+  }
+
+  .img-collage-3{
+    height:200px;
+    width: 200px;
+    
+  }
+  .img-collage-4{
+    height:400px;
+    width: 250px;
+    
+  }
+  /* ====== 6. FEATURED COLLECTION (HOME) ========  */
+  .featured-collection-container {
+    background-color: var(--bg-accent);
+    height: 500px;
+    width: 100vw;
+    padding:30px;
+
+  }
+
+  .title-homepage-featured-coll{
+    color:white;
+  }
+
+  .btn-white{
+    background-color:white;
+    color: grey;
+  }
+
+    /* ====== 7. ABOUT US (HOME) ========  */
+
+
+    .home-about-us-container{
+       padding: 60px 30px; 
+       display:flex;
+       justify-content: space-around;
+    }
+    .about-us-text-cont{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+    }
+
+    .home-about-us-img{
+      width: 400px;
+      height: 200px;
+    }
+
+    .about-us-text{
+     margin-top:10px;
+      width: 300px;
+      text-align: center;
+      margin-bottom:25px;
+    }
+    .btn-green {
+        background-color: var(--bg-accent);
+        color:white;
+    }
