--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,21 @@ body {
   align-self:flex-start;
   margin-left:8%;
   margin-top:-30px;
+  /* border:solid 1px red; */
 }
+
+.home-headericons{
+ display:flex;
+ align-self:flex-end ;
+ margin-top:-30px;display:flex;
+  justify-content: space-around;
+  width: 90px;  
+  /* border:solid 1px orange; */
+}
+
+.header-icons{
+  
+  }
 
 /* instabubble: */
 
@@ -206,6 +220,7 @@ background-position:center;
   width: 200px;  
   /* background-size: cover;
   background-position:center; */
+  /* border:solid 1px purple; */
 }
 
 .logo-small{
@@ -257,6 +272,7 @@ display:flex;
 justify-content: space-around;
 width: 90px;
 margin-top:13px;
+border:solid 1px orange;
 }
 
 .cart{
