--- a/src/index.css
+++ b/src/index.css
@@ -194,7 +194,6 @@ margin-top:10px;
 
 .header-container--botttom{
   margin-top:20px;
-
  display: flex;
  justify-content: space-around;
 }
@@ -227,6 +226,7 @@ background-position:center;
   height:50px;
   width: 150px;
   /* border:1px red solid;  */
+ 
 }
 
 
@@ -272,7 +272,7 @@ display:flex;
 justify-content: space-around;
 width: 90px;
 margin-top:13px;
-border:solid 1px orange;
+/* border:solid 1px orange; */
 }
 
 .cart{
