--- a/src/index.css
+++ b/src/index.css
@@ -317,30 +317,69 @@ width: 22px;;
 
   /* ====== 5. COLLAGE (HOME) ========  */
 
-  .featured-collage-container{
-   
+  .featured-collage-parent-container{
+    display:flex;
+    justify-content: center;
+  }
+
+  .featured-collage-container{   
     margin: 5% 10% 5% 10%;
-    width: 90vw;
+    width: 66%;
     display:grid;
-    grid-template-columns:1fr 1fr 1fr ;
+    grid-template-columns:1fr 1fr 1fr 1fr ;
     grid-template-rows:1fr 1fr ;
-    gap:0.1em;
-    border:1px solid blue;
-    /* display:flex;
-    justify-content: center; */
+    gap:1em;
+    /* border:1px solid blue; */
+   
+  }
 
-
+  .ic{
+    display:flex;
+    justify-content: center;
+    align-items:flex-end;
+    color:transparent;
+    text-decoration: none;
     
   }
 
+  .ic:hover{
+    /* opacity: 0.5; */
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+    text-decoration: none;
+  }
+
+  .ic:hover >div >p {
+    
+    color:black;
+    font-size: 1.1em;
+    font-weight: 800;
+    border: 1px solid #ffffffcc;
+    padding:2px 15px;
+    border-radius: 20px;
+    cursor:pointer;
+    background-color: rgba(255, 255, 255, 0.8);
+    margin-bottom:30%;
+    text-decoration: none;
+    
+  }
+
+
+
+  /* .ic p:hover {
+   border: 1px black solid;
+   width: 50%;
+  } */
+
   .img-collage-1{
-    height:400px;
+    height:416px;
     width: 250px;
     background-size: cover;
     grid-row-start: 1;
     grid-row-end:   3;
-    
+   
   }
+
+  
 
   .img-collage-2{
     height:200px;
@@ -348,6 +387,7 @@ width: 22px;;
     background-size: cover;
     grid-row-start: 1;
     grid-row-end: 1;
+    
   }
 
   .img-collage-3{
@@ -356,13 +396,12 @@ width: 22px;;
     background-size: cover;
     grid-row-start: 2;
     grid-row-end: 2;
-    /* margin-top:200px;
-    margin-left:-200px; */
+    margin-left:0px;
    
    
   }
   .img-collage-4{
-    height:400px;
+    height:416px;
     width: 250px;
     background-size: cover;
     grid-row-start: 1;
